--- a/index.html
+++ b/index.html
@@ -6,57 +6,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webstudio</title>
+    <link rel="stylesheet" href="./CSS/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 
-<body>
+<body class="body">
     <header>
        
         <nav>
-            <a href="./index.html">WebStudio</a>
+            <a class="logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
             <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a class="link" href="">Studio</a></li>
+                <li><a class="link" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a class="contact-inf link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="contact-inf link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
-        <section>
-             <h1>Effective Solutions for Your Business</h1>
-             <button type="button">Order Service</button> 
+        <section class="dark-bk">
+             <h1 class="heder">Effective Solutions for Your Business</h1>
+             <button class="order-but" type="button">Order Service</button> 
         </section>
         <section>
-            <h2>About us</h2>
+            <h2 class="section-title">About us</h2>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
-                    <p>
+                    <h3 class="section-subtitle">Strategy</h3>
+                    <p class="section-text">
                         Our goal is to identify the business problem to walk away with the
                         perfect and creative solution.
                     </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>
+                    <h3 class="section-subtitle">Punctuality</h3>
+                    <p class="section-text">
                         Bring the key message to the brand's audience for the best price
                         within the shortest possible time.
                     </p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>
+                    <h3 class="section-subtitle">Diligence</h3>
+                    <p class="section-text">
                         Research and confirm brands that present the strongest digital
                         growth opportunities and minimize risk.
                     </p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
+                    <h3 class="section-subtitle">Technologies</h3>
                     <p>
                         Design practice focused on digital experiences. We bring forth a
                         deep passion for problem-solving.
@@ -65,7 +68,7 @@
             </ul>
         </section>
         <section>
-            <h2>What are we doing</h2>
+            <h2 class="section-title">What are we doing</h2>
             <ul>
                 <li><img width="360" src="./images/computer-image.jpg" alt="Computer image" /></li>
                 <li>
@@ -74,35 +77,35 @@
                 <li><img width="360" src="./images/phone-image.jpg" alt="Phone image" /></li>
             </ul>
         </section>
-        <section>
-            <h2>Our Team</h2>
+        <section class="sectio-third">
+            <h2 class="section-title">Our Team</h2>
             <ul>
                 <li>
                     <img width="264" src="./images/mark-guerrero.jpg" alt="photo of Mark Guerrero" />
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="section-subtitle">Mark Guerrero</h3>
+                    <p class="section-text">Product Designer</p>
                 </li>
                 <li>
                     <img width="264" src="./images/tom-ford.jpg" alt="photo of Tom Ford" />
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="section-subtitle">Tom Ford</h3>
+                    <p class="section-text">Frontend Developer</p>
                 </li>
                 <li>
                     <img width="264" src="./images/camila-garcia.jpg" alt="Photo of Camila Garcia" />
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="section-subtitle">Camila Garcia</h3>
+                    <p class="section-text">Marketing</p>
                 </li>
                 <li>
                     <img width="264" src="./images/daniel-wilson.jpg" alt="Photo of Daniel Wilson" />
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="section-subtitle">Daniel Wilson</h3>
+                    <p class="section-text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>
+    <footer class="dark-bk">
+        <a class="logo-footer link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+        <p class="footer-text">
             Increase the flow of customers and sales for your business with digital
             marketing & growth solutions.
         </p>
