--- a/portfolio.html
+++ b/portfolio.html
@@ -5,22 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./CSS/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet">
   </head>
 
-  <body>
+  <body class="body">
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a class="link" href="">Studio</a></li>
+          <li><a class="link" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a class="contact-inf link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="contact-inf link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -28,76 +31,76 @@
       <section>
         <h1>Portfolio</h1>
         <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+          <li><button class="filter" type="button">All</button></li>
+          <li><button class="filter" type="button">Web Site</button></li>
+          <li><button class="filter" type="button">App</button></li>
+          <li><button class="filter" type="button">Design</button></li>
+          <li><button class="filter" type="button">Marketing</button></li>
         </ul>
         <ul>
           <li>
             <img width="360" src="./images/banking-app.jpg" alt="Image with phone App" />
-            <h2>Banking App Interface Concept</h2>
-            <p>App</p>
+            <h2 class="section-subtitle">Banking App Interface Concept</h2>
+            <p class="section-text">App</p>
           </li>
           <li>
             <img width="360" src="./images/cashless-payment.jpg" alt="Phone photo" />
-            <h2>Cashless Payment</h2>
-            <p>Marketing</p>
+            <h2 class="section-subtitle">Cashless Payment</h2>
+            <p class="section-text">Marketing</p>
           </li>
           <li>
             <img width="360"
               src="./images/meditation-app.jpg"
               alt="Photo of phone and computer"
             />
-            <h2>Meditation App</h2>
-            <p>App</p>
+            <h2 class="section-subtitle">Meditation App</h2>
+            <p class="section-text">App</p>
           </li>
           <li>
             <img width="360" src="./images/taxi-service.jpg" alt="Car photo" />
-            <h2>Taxi Service</h2>
-            <p>Marketing</p>
+            <h2 class="section-subtitle">Taxi Service</h2>
+            <p class="section-text">Marketing</p>
           </li>
           <li>
             <img width="360"
               src="./images/screen-illustrations.jpg"
               alt="Phone screen image"
             />
-            <h2>Screen Illustrations</h2>
-            <p>Design</p>
+            <h2 class="section-subtitle">Screen Illustrations</h2>
+            <p class="section-text">Design</p>
           </li>
           <li>
             <img width="360" src="./images/online-courses.jpg" alt="Picture of a girl" />
-            <h2>Online Courses</h2>
-            <p>Marketing</p>
+            <h2 class="section-subtitle">Online Courses</h2>
+            <p class="section-text">Marketing</p>
           </li>
           <li>
             <img width="360"
               src="./images/instagram-stories-concept.jpg"
               alt="Set of images"
             />
-            <h2>Instagram Stories Concept</h2>
-            <p>Design</p>
+            <h2 class="section-subtitle">Instagram Stories Concept</h2>
+            <p class="section-text">Design</p>
           </li>
           <li>
             <img width="360"
               src="./images/organic-food.jpg"
               alt="Photo of fruit and vegetable"
             />
-            <h2>Organic Food</h2>
-            <p>Web Site</p>
+            <h2 class="section-subtitle">Organic Food</h2>
+            <p class="section-text">Web Site</p>
           </li>
           <li>
             <img width="360" src="./images/fresh-coffee.jpg" alt="Photo of a coffee" />
-            <h2>Fresh Coffee</h2>
-            <p>Web Site</p>
+            <h2 class="section-subtitle">Fresh Coffee</h2>
+            <p class="section-text">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="dark-bk">
+      <a class="logo-footer link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
