--- a/portfolio.html
+++ b/portfolio.html
@@ -5,15 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./CSS/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet">
+    <link rel="stylesheet" href="./CSS/main.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body class="body">
     <header>
       <nav>
-        <a class="logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+        <a class="logo link" href="./index.html"
+          ><span class="logo-part">Web</span>Studio</a
+        >
         <ul>
           <li><a class="link" href="">Studio</a></li>
           <li><a class="link" href="./portfolio.html">Portfolio</a></li>
@@ -22,8 +26,16 @@
       </nav>
       <address>
         <ul>
-          <li><a class="contact-inf link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="contact-inf link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a class="contact-inf link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contact-inf link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
@@ -39,17 +51,26 @@
         </ul>
         <ul>
           <li>
-            <img width="360" src="./images/banking-app.jpg" alt="Image with phone App" />
+            <img
+              width="360"
+              src="./images/banking-app.jpg"
+              alt="Image with phone App"
+            />
             <h2 class="section-subtitle">Banking App Interface Concept</h2>
             <p class="section-text">App</p>
           </li>
           <li>
-            <img width="360" src="./images/cashless-payment.jpg" alt="Phone photo" />
+            <img
+              width="360"
+              src="./images/cashless-payment.jpg"
+              alt="Phone photo"
+            />
             <h2 class="section-subtitle">Cashless Payment</h2>
             <p class="section-text">Marketing</p>
           </li>
           <li>
-            <img width="360"
+            <img
+              width="360"
               src="./images/meditation-app.jpg"
               alt="Photo of phone and computer"
             />
@@ -62,7 +83,8 @@
             <p class="section-text">Marketing</p>
           </li>
           <li>
-            <img width="360"
+            <img
+              width="360"
               src="./images/screen-illustrations.jpg"
               alt="Phone screen image"
             />
@@ -70,12 +92,17 @@
             <p class="section-text">Design</p>
           </li>
           <li>
-            <img width="360" src="./images/online-courses.jpg" alt="Picture of a girl" />
+            <img
+              width="360"
+              src="./images/online-courses.jpg"
+              alt="Picture of a girl"
+            />
             <h2 class="section-subtitle">Online Courses</h2>
             <p class="section-text">Marketing</p>
           </li>
           <li>
-            <img width="360"
+            <img
+              width="360"
               src="./images/instagram-stories-concept.jpg"
               alt="Set of images"
             />
@@ -83,7 +110,8 @@
             <p class="section-text">Design</p>
           </li>
           <li>
-            <img width="360"
+            <img
+              width="360"
               src="./images/organic-food.jpg"
               alt="Photo of fruit and vegetable"
             />
@@ -91,7 +119,11 @@
             <p class="section-text">Web Site</p>
           </li>
           <li>
-            <img width="360" src="./images/fresh-coffee.jpg" alt="Photo of a coffee" />
+            <img
+              width="360"
+              src="./images/fresh-coffee.jpg"
+              alt="Photo of a coffee"
+            />
             <h2 class="section-subtitle">Fresh Coffee</h2>
             <p class="section-text">Web Site</p>
           </li>
@@ -99,7 +131,9 @@
       </section>
     </main>
     <footer class="dark-bk">
-      <a class="logo-footer link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+      <a class="logo-footer link" href="./index.html"
+        ><span class="logo-part">Web</span>Studio</a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
