--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <header>
       <nav>
         <a class="logo link" href="./index.html"
-          ><span class="logo-part">Web</span>Studio</a
+          >Web<span class="logo-part">Studio</span></a
         >
-        <ul>
-          <li><a class="link" href="">Studio</a></li>
-          <li><a class="link" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="link" href="">Contacts</a></li>
+        <ul class="list">
+          <li><a class="list-items link" href="./index.html">Studio</a></li>
+          <li><a class="list-items link" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="list-items link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
+      <address class="address">
+        <ul class="list">
           <li>
             <a class="contact-inf link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
