--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <button class="order-but" type="button">Order Service</button>
       </section>
       <section>
-        <h2 class="section-title">About us</h2>
-        <ul>
+        <h2 hidden class="section-title">About us</h2>
+        <ul class="list">
           <li>
             <h3 class="section-subtitle">Strategy</h3>
             <p class="section-text">
@@ -70,7 +70,7 @@
           </li>
           <li>
             <h3 class="section-subtitle">Technologies</h3>
-            <p>
+            <p class="section-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
