--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
   </head>
 
-  <body class="body">
+  <body>
     <header>
       <nav>
         <a class="logo link" href="./index.html"
