--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </section>
       <section>
         <h2 class="section-title">What are we doing</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               width="360"
@@ -101,8 +101,8 @@
       </section>
       <section class="sectio-third">
         <h2 class="section-title">Our Team</h2>
-        <ul>
-          <li>
+        <ul class="list">
+          <li >
             <img
               width="264"
               src="./images/mark-guerrero.jpg"
