--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
       </section>
     </main>
     <footer class="dark-bk">
-      <a class="logo-footer link" href="./index.html"
-        ><span class="logo-part">Web</span>Studio</a
+      <a class="logo link" href="./index.html"
+        >Web<span class="logo-part">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
