--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <section class="sectio-third">
         <h2 class="section-title">Our Team</h2>
         <ul class="list">
-          <li >
+          <li class="photo-acent">
             <img
               width="264"
               src="./images/mark-guerrero.jpg"
@@ -143,7 +143,7 @@
     </main>
     <footer class="dark-bk">
       <a class="logo link" href="./index.html"
-        >Web<span class="logo-part">Studio</span></a
+        >Web<span class="logo-part-s">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
