--- a/portfolio.html
+++ b/portfolio.html
@@ -41,89 +41,57 @@
     </header>
     <main>
       <section>
-        <h1>Portfolio</h1>
-        <ul>
+        <h1 hidden >Portfolio</h1>
+        <ul class="list">
           <li><button class="filter" type="button">All</button></li>
           <li><button class="filter" type="button">Web Site</button></li>
           <li><button class="filter" type="button">App</button></li>
           <li><button class="filter" type="button">Design</button></li>
           <li><button class="filter" type="button">Marketing</button></li>
         </ul>
-        <ul>
+        <ul class="list">
           <li>
-            <img
-              width="360"
-              src="./images/banking-app.jpg"
-              alt="Image with phone App"
-            />
+            <a class="link" href=""><img width="360" src="./images/banking-app.jpg" alt="Image with phone App" /></a>
             <h2 class="section-subtitle">Banking App Interface Concept</h2>
             <p class="section-text">App</p>
           </li>
           <li>
-            <img
-              width="360"
-              src="./images/cashless-payment.jpg"
-              alt="Phone photo"
-            />
+            <a class="link" href=""><img width="360" src="./images/cashless-payment.jpg" alt="Phone photo" /></a>
             <h2 class="section-subtitle">Cashless Payment</h2>
             <p class="section-text">Marketing</p>
           </li>
           <li>
-            <img
-              width="360"
-              src="./images/meditation-app.jpg"
-              alt="Photo of phone and computer"
-            />
+            <a class="link" href=""><img width="360" src="./images/meditation-app.jpg" alt="Photo of phone and computer" /></a>
             <h2 class="section-subtitle">Meditation App</h2>
             <p class="section-text">App</p>
           </li>
           <li>
-            <img width="360" src="./images/taxi-service.jpg" alt="Car photo" />
+            <a class="link" href=""><img width="360" src="./images/taxi-service.jpg" alt="Car photo" />
             <h2 class="section-subtitle">Taxi Service</h2>
-            <p class="section-text">Marketing</p>
+            <p class="section-text">Marketing</p></a>
           </li>
           <li>
-            <img
-              width="360"
-              src="./images/screen-illustrations.jpg"
-              alt="Phone screen image"
-            />
+            <a class="link" href=""><img width="360" src="./images/screen-illustrations.jpg" alt="Phone screen image" /></a>
             <h2 class="section-subtitle">Screen Illustrations</h2>
             <p class="section-text">Design</p>
           </li>
           <li>
-            <img
-              width="360"
-              src="./images/online-courses.jpg"
-              alt="Picture of a girl"
-            />
+            <a class="link" href=""><img width="360" src="./images/online-courses.jpg" alt="Picture of a girl" /></a>
             <h2 class="section-subtitle">Online Courses</h2>
             <p class="section-text">Marketing</p>
           </li>
           <li>
-            <img
-              width="360"
-              src="./images/instagram-stories-concept.jpg"
-              alt="Set of images"
-            />
+            <a class="link" href=""><img width="360" src="./images/instagram-stories-concept.jpg" alt="Set of images" /></a>
             <h2 class="section-subtitle">Instagram Stories Concept</h2>
             <p class="section-text">Design</p>
           </li>
           <li>
-            <img
-              width="360"
-              src="./images/organic-food.jpg"
-              alt="Photo of fruit and vegetable"
-            />
+            <a class="link" href=""><img width="360" src="./images/organic-food.jpg" alt="Photo of fruit and vegetable" /></a>
             <h2 class="section-subtitle">Organic Food</h2>
             <p class="section-text">Web Site</p>
           </li>
           <li>
-            <img
-              width="360"
-              src="./images/fresh-coffee.jpg"
-              alt="Photo of a coffee"
-            />
+            <a class="link" href=""><img width="360" src="./images/fresh-coffee.jpg" alt="Photo of a coffee" /></a>
             <h2 class="section-subtitle">Fresh Coffee</h2>
             <p class="section-text">Web Site</p>
           </li>
