--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <h3 class="section-subtitle">Mark Guerrero</h3>
             <p class="section-text">Product Designer</p>
           </li>
-          <li>
+          <li class="photo-acent">
             <img
               width="264"
               src="./images/tom-ford.jpg"
@@ -120,7 +120,7 @@
             <h3 class="section-subtitle">Tom Ford</h3>
             <p class="section-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="photo-acent">
             <img
               width="264"
               src="./images/camila-garcia.jpg"
@@ -129,7 +129,7 @@
             <h3 class="section-subtitle">Camila Garcia</h3>
             <p class="section-text">Marketing</p>
           </li>
-          <li>
+          <li class="photo-acent">
             <img
               width="264"
               src="./images/daniel-wilson.jpg"
