--- a/portfolio.html
+++ b/portfolio.html
@@ -51,19 +51,19 @@
         </ul>
         <ul class="list">
           <li>
-            <a class="link" href=""><img width="360" src="./images/banking-app.jpg" alt="Image with phone App" /></a>
+            <a class="link" href=""><img width="360" src="./images/banking-app.jpg" alt="Image with phone App" />
             <h2 class="section-subtitle">Banking App Interface Concept</h2>
-            <p class="section-text">App</p>
+            <p class="section-text">App</p></a>
           </li>
           <li>
-            <a class="link" href=""><img width="360" src="./images/cashless-payment.jpg" alt="Phone photo" /></a>
+            <a class="link" href=""><img width="360" src="./images/cashless-payment.jpg" alt="Phone photo" />
             <h2 class="section-subtitle">Cashless Payment</h2>
-            <p class="section-text">Marketing</p>
+            <p class="section-text">Marketing</p> </a>
           </li>
           <li>
-            <a class="link" href=""><img width="360" src="./images/meditation-app.jpg" alt="Photo of phone and computer" /></a>
+            <a class="link" href=""><img width="360" src="./images/meditation-app.jpg" alt="Photo of phone and computer" />
             <h2 class="section-subtitle">Meditation App</h2>
-            <p class="section-text">App</p>
+            <p class="section-text">App</p> </a>
           </li>
           <li>
             <a class="link" href=""><img width="360" src="./images/taxi-service.jpg" alt="Car photo" />
@@ -71,29 +71,29 @@
             <p class="section-text">Marketing</p></a>
           </li>
           <li>
-            <a class="link" href=""><img width="360" src="./images/screen-illustrations.jpg" alt="Phone screen image" /></a>
+            <a class="link" href=""><img width="360" src="./images/screen-illustrations.jpg" alt="Phone screen image" />
             <h2 class="section-subtitle">Screen Illustrations</h2>
-            <p class="section-text">Design</p>
+            <p class="section-text">Design</p></a>
           </li>
           <li>
-            <a class="link" href=""><img width="360" src="./images/online-courses.jpg" alt="Picture of a girl" /></a>
+            <a class="link" href=""><img width="360" src="./images/online-courses.jpg" alt="Picture of a girl" />
             <h2 class="section-subtitle">Online Courses</h2>
-            <p class="section-text">Marketing</p>
+            <p class="section-text">Marketing</p></a>
           </li>
           <li>
-            <a class="link" href=""><img width="360" src="./images/instagram-stories-concept.jpg" alt="Set of images" /></a>
+            <a class="link" href=""><img width="360" src="./images/instagram-stories-concept.jpg" alt="Set of images" />
             <h2 class="section-subtitle">Instagram Stories Concept</h2>
-            <p class="section-text">Design</p>
+            <p class="section-text">Design</p></a>
           </li>
           <li>
-            <a class="link" href=""><img width="360" src="./images/organic-food.jpg" alt="Photo of fruit and vegetable" /></a>
+            <a class="link" href=""><img width="360" src="./images/organic-food.jpg" alt="Photo of fruit and vegetable" />
             <h2 class="section-subtitle">Organic Food</h2>
-            <p class="section-text">Web Site</p>
+            <p class="section-text">Web Site</p></a>
           </li>
           <li>
-            <a class="link" href=""><img width="360" src="./images/fresh-coffee.jpg" alt="Photo of a coffee" /></a>
+            <a class="link" href=""><img width="360" src="./images/fresh-coffee.jpg" alt="Photo of a coffee" />
             <h2 class="section-subtitle">Fresh Coffee</h2>
-            <p class="section-text">Web Site</p>
+            <p class="section-text">Web Site</p></a>
           </li>
         </ul>
       </section>
