--- a/index.html
+++ b/index.html
@@ -5,150 +5,178 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webstudio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <header>
-      <nav>
+      <div class="heder-container container">
         <a class="logo link" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
+          >Web<span class="logo-part-top">Studio</span></a
         >
-        <ul class="list">
-          <li><a class="list-items link" href="./index.html">Studio</a></li>
-          <li><a class="list-items link" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="list-items link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="list">
-          <li>
-            <a class="contact-inf link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="contact-inf link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <nav class="nav">
+          <ul class="list nav-list">
+            <li><a class="list-items link" href="./index.html">Studio</a></li>
+            <li>
+              <a class="list-items link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li><a class="list-items link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="addres-list list">
+            <li>
+              <a class="contact-inf link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contact-inf link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
-      <section class="dark-bk">
-        <h1 class="heder">Effective Solutions for Your Business</h1>
-        <button class="order-but" type="button">Order Service</button>
+      <section class="dark-bk section">
+        <div class="container">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button class="main-btn" type="button">Order Service</button>
+        </div>
       </section>
-      <section>
-        <h2 hidden class="section-title">About us</h2>
-        <ul class="list">
-          <li>
-            <h3 class="section-subtitle">Strategy</h3>
-            <p class="section-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-subtitle">Punctuality</h3>
-            <p class="section-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-subtitle">Diligence</h3>
-            <p class="section-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-subtitle">Technologies</h3>
-            <p class="section-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 hidden class="section-title">About us</h2>
+          <ul class="list card-list ">
+            <li class="card-list-item">
+              <h3 class="section-subtitle subtitle-about-us">Strategy</h3>
+              <p class="section-text text-about-us">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="card-list-item">
+              <h3 class="section-subtitle subtitle-about-us">Punctuality</h3>
+              <p class="section-text text-about-us">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="card-list-item">
+              <h3 class="section-subtitle subtitle-about-us">Diligence</h3>
+              <p class="section-text text-about-us">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="card-list-item">
+              <h3 class="section-subtitle subtitle-about-us">Technologies</h3>
+              <p class="section-text text-about-us">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section>
-        <h2 class="section-title">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img
-              width="360"
-              src="./images/computer-image.jpg"
-              alt="Computer image"
-            />
-          </li>
-          <li>
-            <img
-              width="360"
-              src="./images/conversation-image.jpg"
-              alt="Conversation image"
-            />
-          </li>
-          <li>
-            <img width="360" src="./images/phone-image.jpg" alt="Phone image" />
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">What are we doing</h2>
+          <ul class="list card-set">
+            <li class="doing-images card-set-item">
+              <img
+                width="360"
+                src="./images/computer-image.jpg"
+                alt="Computer image"
+              />
+            </li>
+            <li class="doing-images card-set-item">
+              <img
+                width="360"
+                src="./images/conversation-image.jpg"
+                alt="Conversation image"
+              />
+            </li>
+            <li class="doing-images card-set-item">
+              <img
+                width="360"
+                src="./images/phone-image.jpg"
+                alt="Phone image"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
-      <section class="sectio-third">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="list">
-          <li class="photo-acent">
-            <img
-              width="264"
-              src="./images/mark-guerrero.jpg"
-              alt="photo of Mark Guerrero"
-            />
-            <h3 class="section-subtitle">Mark Guerrero</h3>
-            <p class="section-text">Product Designer</p>
-          </li>
-          <li class="photo-acent">
-            <img
-              width="264"
-              src="./images/tom-ford.jpg"
-              alt="photo of Tom Ford"
-            />
-            <h3 class="section-subtitle">Tom Ford</h3>
-            <p class="section-text">Frontend Developer</p>
-          </li>
-          <li class="photo-acent">
-            <img
-              width="264"
-              src="./images/camila-garcia.jpg"
-              alt="Photo of Camila Garcia"
-            />
-            <h3 class="section-subtitle">Camila Garcia</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li class="photo-acent">
-            <img
-              width="264"
-              src="./images/daniel-wilson.jpg"
-              alt="Photo of Daniel Wilson"
-            />
-            <h3 class="section-subtitle">Daniel Wilson</h3>
-            <p class="section-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="sectio-third section">
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="list list card-set">
+            <li class="card-set-item">
+              <img
+                class="image-of-hero"
+                width="264"
+                src="./images/mark-guerrero.jpg"
+                alt="photo of Mark Guerrero"
+              />
+              <h3 class="section-subtitle name-of-hero">Mark Guerrero</h3>
+              <p class="section-text">Product Designer</p>
+            </li>
+            <li class="card-set-item">
+              <img
+                class="image-of-hero"
+                width="264"
+                src="./images/tom-ford.jpg"
+                alt="photo of Tom Ford"
+              />
+              <h3 class="section-subtitle name-of-hero">Tom Ford</h3>
+              <p class="section-text">Frontend Developer</p>
+            </li>
+            <li class="card-set-item">
+              <img
+                class="image-of-hero"
+                width="264"
+                src="./images/camila-garcia.jpg"
+                alt="Photo of Camila Garcia"
+              />
+              <h3 class="section-subtitle name-of-hero">Camila Garcia</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li class="card-set-item">
+              <img
+                class="image-of-hero"
+                width="264"
+                src="./images/daniel-wilson.jpg"
+                alt="Photo of Daniel Wilson"
+              />
+              <h3 class="section-subtitle name-of-hero">Daniel Wilson</h3>
+              <p class="section-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="dark-bk">
+      <div class="footer">
       <a class="logo link" href="./index.html"
-        >Web<span class="logo-part-s">Studio</span></a
+        >Web<span class="logo-part-btm">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+      </div>
     </footer>
   </body>
 </html>
