--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,99 +14,99 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <a class="logo link" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <ul class="list">
+  <header>
+    <div class="heder-container container">
+      <a class="logo link" href="./index.html">Web<span class="logo-part-top">Studio</span></a>
+      <nav class="nav">
+        <ul class="list nav-list">
           <li><a class="list-items link" href="./index.html">Studio</a></li>
-          <li><a class="list-items link" href="./portfolio.html">Portfolio</a></li>
+          <li>
+            <a class="list-items link" href="./portfolio.html">Portfolio</a>
+          </li>
           <li><a class="list-items link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
-        <ul class="list">
+        <ul class="addres-list list">
           <li>
-            <a class="contact-inf link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a class="contact-inf link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a class="contact-inf link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+            <a class="contact-inf link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
-    </header>
+    </div>
+  </header>
     <main>
       <section>
+        <div class="container">
         <h1 hidden >Portfolio</h1>
-        <ul class="list">
+        <ul class="list flter-list">
           <li><button class="filter" type="button">All</button></li>
           <li><button class="filter" type="button">Web Site</button></li>
           <li><button class="filter" type="button">App</button></li>
           <li><button class="filter" type="button">Design</button></li>
           <li><button class="filter" type="button">Marketing</button></li>
         </ul>
-        <ul class="list">
-          <li>
+        <ul class="list card-list">
+          <li class="card-list-item">
             <a class="link" href=""><img width="360" src="./images/banking-app.jpg" alt="Image with phone App" />
-            <h2 class="section-subtitle">Banking App Interface Concept</h2>
-            <p class="section-text">App</p></a>
+            <h2 class="section-subtitle subtitle-about-work">Banking App Interface Concept</h2>
+            <p class="section-text text-about-wirk">App</p></a>
           </li>
-          <li>
+          <li class="card-list-item">
             <a class="link" href=""><img width="360" src="./images/cashless-payment.jpg" alt="Phone photo" />
-            <h2 class="section-subtitle">Cashless Payment</h2>
-            <p class="section-text">Marketing</p> </a>
+            <h2 class="section-subtitle subtitle-about-work">Cashless Payment</h2>
+            <p class="section-text text-about-wirk">Marketing</p> </a>
           </li>
-          <li>
+          <li class="card-list-item">
             <a class="link" href=""><img width="360" src="./images/meditation-app.jpg" alt="Photo of phone and computer" />
-            <h2 class="section-subtitle">Meditation App</h2>
-            <p class="section-text">App</p> </a>
+            <h2 class="section-subtitle subtitle-about-work">Meditation App</h2>
+            <p class="section-text text-about-wirk">App</p> </a>
           </li>
-          <li>
+          <li class="card-list-item">
             <a class="link" href=""><img width="360" src="./images/taxi-service.jpg" alt="Car photo" />
-            <h2 class="section-subtitle">Taxi Service</h2>
-            <p class="section-text">Marketing</p></a>
+            <h2 class="section-subtitle subtitle-about-work">Taxi Service</h2>
+            <p class="section-text text-about-wirk">Marketing</p></a>
           </li>
-          <li>
+          <li class="card-list-item">
             <a class="link" href=""><img width="360" src="./images/screen-illustrations.jpg" alt="Phone screen image" />
-            <h2 class="section-subtitle">Screen Illustrations</h2>
-            <p class="section-text">Design</p></a>
+            <h2 class="section-subtitle subtitle-about-work">Screen Illustrations</h2>
+            <p class="section-text text-about-wirk">Design</p></a>
           </li>
-          <li>
+          <li class="card-list-item">
             <a class="link" href=""><img width="360" src="./images/online-courses.jpg" alt="Picture of a girl" />
-            <h2 class="section-subtitle">Online Courses</h2>
-            <p class="section-text">Marketing</p></a>
+            <h2 class="section-subtitle subtitle-about-work">Online Courses</h2>
+            <p class="section-text text-about-wirk">Marketing</p></a>
           </li>
-          <li>
+          <li class="card-list-item">
             <a class="link" href=""><img width="360" src="./images/instagram-stories-concept.jpg" alt="Set of images" />
-            <h2 class="section-subtitle">Instagram Stories Concept</h2>
-            <p class="section-text">Design</p></a>
+            <h2 class="section-subtitle subtitle-about-work">Instagram Stories Concept</h2>
+            <p class="section-text text-about-wirk">Design</p></a>
           </li>
-          <li>
+          <li class="card-list-item">
             <a class="link" href=""><img width="360" src="./images/organic-food.jpg" alt="Photo of fruit and vegetable" />
-            <h2 class="section-subtitle">Organic Food</h2>
-            <p class="section-text">Web Site</p></a>
+            <h2 class="section-subtitle subtitle-about-work">Organic Food</h2>
+            <p class="section-text text-about-wirk">Web Site</p></a>
           </li>
-          <li>
+          <li class="card-list-item">
             <a class="link" href=""><img width="360" src="./images/fresh-coffee.jpg" alt="Photo of a coffee" />
-            <h2 class="section-subtitle">Fresh Coffee</h2>
-            <p class="section-text">Web Site</p></a>
+            <h2 class="section-subtitle subtitle-about-work">Fresh Coffee</h2>
+            <p class="section-text text-about-wirk">Web Site</p></a>
           </li>
         </ul>
+        </div>
       </section>
     </main>
-    <footer class="dark-bk">
-      <a class="logo link" href="./index.html"
-        >Web<span class="logo-part-s">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
+      <footer class="dark-bk">
+        <div class="footer">
+          <a class="logo link" href="./index.html">Web<span class="logo-part-btm">Studio</span></a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with digital
+            marketing & growth solutions.
+          </p>
+        </div>
+      </footer>
   </body>
 </html>
